menu factory and other component changes

--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -12,7 +12,8 @@
     "strict": true,
     "sourceMap": true,
     "target": "esnext",
-    "outDir": null
+    "outDir": null,
+    "declaration": false
   },
   "exclude": [
     "node_modules"
