--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "react-burger-menu-v2",
+  "name": "animated-menu-react",
   "version": "1.0.0",
-  "description": "An off-canvas sidebar component with a collection of effects and styles using CSS transitions and SVG path animations",
+  "description": "An off-canvas sidebar component with a collection of effects and styles using CSS transitions",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "author": "Aryan Joshi",
-  "homepage": "https://github.com/AryanJoshii/react-burger-menu-v2.git",
+  "homepage": "https://github.com/AryanJoshii/animated-menu-react.git",
   "repository": {
     "type": "git",
-    "url": "https://github.com/AryanJoshii/react-burger-menu-v2.git"
+    "url": "https://github.com/AryanJoshii/animated-menu-react.git"
   },
   "bugs": {
-    "url": "https://github.com/AryanJoshii/react-burger-menu-v2.git/issues"
+    "url": "https://github.com/AryanJoshii/animated-menu-react.git/issues"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -20,6 +20,7 @@
     "build:example": "NODE_ENV=production webpack"
   },
   "keywords": [
+    "animations",
     "component",
     "hamburger",
     "menu",
