--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "bugs": {
     "url": "https://github.com/AryanJoshii/animated-menu-react.git/issues"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build:package": "tsc",
-    "start": "webpack serve --port 3000",
-    "build:example": "NODE_ENV=production webpack"
+"scripts": {
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "build:package": "tsc",
+  "dev": "vite serve ./example",
+  "start": "vite preview ./example",
+  "build:example": "tsc -p ./example && vite build ./example"
   },
   "keywords": [
     "animations",
@@ -30,11 +31,19 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "@eslint/js": "^9.15.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.3",
+    "eslint": "^9.15.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.14.0",
+    "vite": "^5.4.11"
   },
   "peerDependencies": {
     "react": "^18.3.1 || >=17.0.0"
