--- a/package/tsconfig.json
+++ b/package/tsconfig.json
@@ -14,9 +14,8 @@
     "skipLibCheck": true,
   },
   "exclude": [
-    "./example/**/*",
     "./dist/**/*",
     "node_modules" 
   ],
-  "include": ["src"]
+  "include": ["./src"]
 }
