Example site UI and Readme changes

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
         "build": "turbo build",
         "dev": "turbo dev",
         "lint": "turbo lint",
-        "package:changeset": "changeset",
-        "package:version": "changeset version",
+        "package:version": "changeset && changeset version",
         "package:publish": "turbo run build && changeset publish"
     },
     "packageManager": "npm@10.8.2",
