--- a/.github/workflows/example-site-deploy.yml
+++ b/.github/workflows/example-site-deploy.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main  # Trigger on push to 'main' branch
-    paths:
-      - 'example-site/**'  # Trigger only if changes occur inside the 'example' folder
+    # paths:
+    #   - 'example-site/**'  # Trigger only if changes occur inside the 'example' folder
 
 jobs:
   deploy:
