--- a/.github/workflows/example-site-deploy.yml
+++ b/.github/workflows/example-site-deploy.yml
@@ -12,6 +12,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout main branch
+      uses: actions/checkout@v4
+      with:
+        ref: main  # Ensure we are checking out the main branch
+
     - name: Checkout gh-pages-deploy branch
       uses: actions/checkout@v4
       with:
