--- a/.github/workflows/example-site-deploy.yml
+++ b/.github/workflows/example-site-deploy.yml
@@ -27,7 +27,7 @@ jobs:
         git ls-files -z -- ':!:.gitignore' | xargs -0 git rm -f # Remove all files in gh-pages-deploy branch except .gitignore 
 
     - name: Copy folder contents from main branch
-      use: actions/checkout@v4
+      uses: actions/checkout@v4
       with:
         sparse-checkout: example/dist
 
