--- a/package/package.json
+++ b/package/package.json
@@ -33,7 +33,7 @@
     "typescript": "^5.6.3"
   },
   "peerDependencies": {
-    "react": "^18.3.1 || >=17.0.0"
+    "react": ">=17.0.0"
   },
   "exports": {
     ".": {
