--- a/package/tsconfig.json
+++ b/package/tsconfig.json
@@ -6,7 +6,7 @@
     "moduleResolution": "bundler",
     "declaration": true,
     "outDir": "./dist",
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
